# NYC-crash-data

NYC-crash-data/: .env.example  .gitignore  README.md  pyproject.toml
NYC-crash-data/.dg/: telemetry.yaml
NYC-crash-data/src/NYC_crash_data/defs/: assets.py  constants.py  download_utils.py  resources.py
home/agent/: .env.local
home/agent/src/: .env.example
home/agent/src/scripts/: setup.sh
home/agent/src/src/__tests__/api/: error-analytics.test.ts
home/agent/src/src/__tests__/app/error-analytics/: page.test.tsx
home/agent/src/src/__tests__/lib/: errorLogger.test.ts
home/agent/src/src/app/api/error-analytics/: route.ts
home/agent/src/src/app/api/register/: route.ts
home/agent/src/src/app/error-analytics/: page.tsx
home/agent/src/src/lib/: auth.ts  errorLogger.ts
